Write ListBotStrategy and RestBotStrategy abstract class, update Dto and ScrapperClient