@@ -2,46 +2,53 @@ package backend.academy.bot.strategies;
 
 import backend.academy.ErrorDto;
 import backend.academy.bot.scrapper.communication.ScrapperClient;
+import backend.academy.bot.scrapper.communication.ScrapperConnectionFailedException;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.pengrad.telegrambot.TelegramBot;
 import com.pengrad.telegrambot.request.SendMessage;
 import java.net.http.HttpResponse;
-import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 @Slf4j
 @Component
-@AllArgsConstructor
-public class StartBotStrategy implements BotStrategy {
-    private final static String COMMAND = "/help";
+public class StartBotStrategy extends RestBotStrategy {
+    private final static String COMMAND = "/start";
+
     private final static String SUCCESS_MESSAGE = """
         This chat is successfully registered!
         Use /help to see the list of available commands!
         """;
-    private final static String FAILURE_MESSAGE = """
-        Failed to register a new chat!
-        Try again later!
-        """;
 
-    private final TelegramBot bot;
-    private final ScrapperClient scrapperClient;
-    private final ObjectMapper objectMapper;
+    public StartBotStrategy(TelegramBot bot, ObjectMapper mapper, ScrapperClient scrapperClient) {
+        super(bot, mapper, scrapperClient);
+    }
+
 
     @Override
     public void applyStrategy(long id) {
-        HttpResponse<String> response = scrapperClient.registerChat(id);
+        HttpResponse<String> response = null;
+
+        try {
+            response = scrapperClient.registerChat(id);
+        } catch (ScrapperConnectionFailedException e) {
+            sendFailureMessage(id);
+            log.error("Scrapper connection failure", e);
+            return;
+        }
+
         if (response.statusCode() == 200) {
             bot.execute(new SendMessage(id, SUCCESS_MESSAGE));
-            log.info("Successfully registered chat with id %d".formatted(id));
+            log.info(String.format("Successfully registered chat with id %d", id));
         } else {
             try {
-                bot.execute(new SendMessage(id, FAILURE_MESSAGE));
-                ErrorDto error = objectMapper.readValue(response.body(), ErrorDto.class);
-                log.error("Failed to register chat with id %d with description %s".formatted(id, error.description()));
+                sendFailureMessage(id);
+                ErrorDto error = mapper.readValue(response.body(), ErrorDto.class);
+                log.error(String.format("Failed to register chat with id %d with description %s",
+                    id, error.description()));
             } catch (JsonProcessingException e) {
-                log.error("Can't parse json response", e);
+                handleJsonProcessingException(id, e);
             }
         }
     }
